# scada-honeypot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  compose.yaml  pyproject.toml
.beads/: config.yaml  issues.jsonl  metadata.json
.github/workflows/: docker-publish.yml
.schrammns_workflow/plans/: 2026-04-17-phase-de-next-path.md  2026-04-24-realistic-plant-dynamics-and-weather.md  2026-04-28-v1-release-readiness.md
deploy/: lab-vm-observer-01.env.example
docker/: entrypoint.sh  healthcheck.sh
docs/: agent-handoff.md  architecture.md  domain-model.md  exposed-research-checklist-example.md  exposed-research-checklist-lab-vm-observer-01.md  exposed-research-checklist.md  exposed-research-profile-lab-vm-observer-01.md  exposed-research-runbook.md  hmi-concept.md  implementation-roadmap.md  logging-and-events.md  pre-exposure-decision.md  protocol-profile.md  register-matrix.md  release-checklist.md  scada-primer-and-module-guide.md  security-operations.md  solarpark-honeypot-scope.md  test-attacker-guide.md  testing-strategy.md  v1-decisions.md
fixtures/: normal_operation.json
resources/: backend_versions.json
src/honeypot/: __init__.py  geoip_update.py  history_core.py  http_source.py  main.py  runtime_egress.py  runtime_evolution.py  runtime_exposure.py  runtime_ingress.py  runtime_reset.py  time_core.py
tests/contract/: test_protocol_modbus_read_only.py
tests/e2e/: test_hmi_service_playwright.py
tests/integration/: test_hmi_web_overview.py  test_ops_web.py  test_release_gates.py  test_runtime_main.py
(+84 files in other folders)
