[build-system]
requires = ["hatchling>=1.27,<2.0"]
build-backend = "hatchling.build"

[project]
name = "scada-honeypot"
version = "1.2.1"
description = "Fiktiver SCADA-Honeypot fuer einen Solarpark."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115,<1.0",
  "geoip2>=4.8,<5.0",
  "httpx>=0.28,<1.0",
  "jinja2>=3.1,<4.0",
  "maxminddb>=2.8,<3.0",
  "pydantic>=2.11,<3.0",
  "pydantic-settings>=2.8,<3.0",
  "pymodbus>=3.8,<4.0",
  "python-dotenv>=1.1,<2.0",
  "uvicorn>=0.35,<1.0",
]

[project.scripts]
honeypot = "honeypot.main:main"

[dependency-groups]
dev = [
  "playwright>=1.54,<2.0",
  "pytest>=8.4,<9.0",
  "pytest-asyncio>=1.1,<2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/honeypot"]

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
testpaths = ["tests"]
